--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <h2>&raquo; Enough! Show me a demo already!</h2>
 
-<center><iframe src="//player.vimeo.com/video/69860472" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></center>
+<center><iframe src="//player.vimeo.com/video/69860472" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="padding-top: 30px;"></iframe></center>
 
 <p>And that's it. A journal with a nice web interface, an archive of the back and forth between reviewer and author, and a working peer review system. Simple. Beyond the lack of copyediting, everything you could want from a journal.<sup>6</sup></p>
 
