--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <p>We thought Peter's notion was worth a go. Commendably, he'd offered to put his money where his mouth was and pay for the setting up of an Open Journal of Astrophysics. We offered to build it for free and got on with building a suitable interface so that the OJA (or OJoA, I suppose) could exist. The idea is that the author would submit to arXiv, then declare to the OJA that they wished their paper reviewed. OJA ingests the paper, creating along the way a GitHub repository<sup>4</sup> and alerts editors who could assign a reviewer the task of looking at the paper. It's important to note this <em>is</em> traditional peer review - the goal for OJA was to dramatically reduce the cost of running a journal, not to experiment with new models. The reviewer makes comments via a web interface which are relayed to the author, who can respond and update the paper, perhaps by submitting a new version to arXiv which would automatically be read by the OJA. Once everything is resolved, the editor can review the discussion and accept or reject the paper. At this point, we'd register the paper via a DOI<sup>5</sup> and it could be included in all the normal places you expect peer reviewed articles to appear, such as Web of Science or NASA's ADS service.</p>
 
-<h2>&raquo; Enough! Show me a demo already!</h2>
+<h2>&raquo; Show me a demo already!</h2>
 
 <center><iframe src="//player.vimeo.com/video/69860472" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="padding-top: 30px;"></iframe></center>
 
