--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>The Open Journal by arfon</title>
+    <title>The Open Journal</title>
     <style>
     .wrapper{
     	width:900px;
